--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --progress --config webpack.config.build.js",
-        "dev": "webpack serve --progress --config webpack.config.dev.js",
-        "start": "pnpm dev",
+        "backend:build": "node app.js",
+        "backend:dev": "nodemon app.js",
+        "frontend:build": "webpack --progress --config webpack.config.build.js",
+        "frontend:dev": "webpack serve --progress --config webpack.config.dev.js",
+        "start": "concurrently --kill-others \"pnpm backend:dev\" \"pnpm frontend:dev\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -14,8 +16,10 @@
     "license": "ISC",
     "packageManager": "pnpm@10.8.1",
     "devDependencies": {
+        "@prettier/plugin-pug": "^3.4.0",
         "babel-loader": "^10.0.0",
         "clean-webpack-plugin": "^4.0.0",
+        "concurrently": "^9.2.0",
         "copy-webpack-plugin": "^13.0.0",
         "css-loader": "^7.1.2",
         "eslint": "^9.29.0",
@@ -31,6 +35,7 @@
         "imagemin": "^9.0.1",
         "mini-css-extract-plugin": "^2.9.2",
         "postcss-loader": "^8.1.1",
+        "prettier": "^3.6.2",
         "sass": "^1.89.2",
         "sass-loader": "^16.0.5",
         "terser-webpack-plugin": "^5.3.14",
@@ -40,6 +45,9 @@
         "webpack-merge": "^6.0.1"
     },
     "dependencies": {
+        "express": "^5.1.0",
+        "nodemon": "^3.1.10",
+        "pug": "^3.0.3",
         "sharp": "^0.34.2"
     }
 }
